--- a/HotelMaui/Views/HospedagemContratada.xaml
+++ b/HotelMaui/Views/HospedagemContratada.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HotelMaui.Views.HospedagemContratada"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout VerticalOptions="CenterAndExpand">
         <Label Text="{Binding QuartoSelecionado.Descricao}"
                TextColor="{StaticResource Primary}"
